force-app/main/default/objects/Subcontractor_Partner__c/Subcontractor_Partner__c.object-meta.xml
<CustomObject>
    <label>Subcontractor / Partner</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Subcontractor / Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subcontractors / Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>