force-app/main/default/objects/Subcontractor_Partner__c/fields/Estimated_Ceiling_Price__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Ceiling_Price__c</fullName>
    <label>Estimated Ceiling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>