force-app/main/default/objects/Subcontractor_Partner__c/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <formula>Estimated_Hours__c *   Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>