force-app/main/default/objects/Subcontractor_Partner__c/fields/Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate__c</fullName>
    <label>Hourly-Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>