force-app/main/default/objects/Subcontractor_Partner__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Subcontractors / Partners</relationshipLabel>
    <relationshipName>Subcontractors_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>