force-app/main/default/objects/Subcontractor_Partner__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Sales</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Expert Knowledge</fullName>
            </value>
            <value>
                <fullName>Requirements</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>