force-app/main/default/objects/Subcontractor_Partner__c/fields/Subcontractor_Partner__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_Partner__c</fullName>
    <label>Subcontractor / Partner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Please choose a Partner or a Partner Person Account</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partner Person Account</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subcontractors / Partners</relationshipLabel>
    <relationshipName>Subcontractors_Partners</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>